--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
     "yarn": "^1.22.22"
