--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cookie": "^0.6.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/node": "^20",
